<resources>
    <string name="app_name">收入账本</string>
    <string name="request_err_tips">请求失败</string>
    <string name="sifting">筛选</string>
    <string name="clean_data">清除数据</string>
    <string name="daily_statistic">每日统计</string>
    <string name="monthly_statistic">月度统计</string>
    <string name="annual_statistic">年度统计</string>
    <string name="date_sifting_annual">按年筛选</string>
    <string name="date_sifting_monthly">按月筛选</string>
    <string name="date_sifting_daily">按日筛选</string>
    <string name="sure">确定</string>
    <string name="end_page">已经是最后一页</string>
    <string name="pull_up_load_more">上拉加载</string>
    <string name="loading">正在加载</string>
    <string name="loosen_to_load_more">松开加载更多</string>
    <string name="loosen_to_refresh">松开刷新</string>
    <string name="refreshing">刷新中</string>
    <string name="pull_down_refresh">下拉刷新</string>
    <string name="total_income">总收入</string>
    <string name="total_transit_truck">运输车辆总计</string>
    <string name="transit_bill_record">运单记录</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="yuan">元</string>
    <string name="liang">辆</string>
    <string name="ci">次</string>
    <string name="raw_electronic_bill_title">电子对账单</string>
    <string name="hsjc_electronic_bill_title">次</string>
    <string name="choose_month">请选择月份</string>
    <string name="refused">已拒绝</string>
    <string name="agreed">已同意</string>
    <string name="refuse">拒绝</string>
    <string name="agree">同意</string>
</resources>
